--- a/client/my-app/src/App.css
+++ b/client/my-app/src/App.css
@@ -1,4 +1,3 @@
-/* General Styles */
 body {
   margin: 0;
   padding: 0;
@@ -6,15 +5,13 @@ body {
   background-color: #f5f5f5;
 }
 
-/* Main App Container */
 .AppChannel {
   display: flex;
   width: 100vw;
   height: 100vh;
-  overflow: hidden; /* Ensure no scrollbars appear on the main container */
+  overflow: hidden;
 }
 
-/* Left Channel Styles */
 .AppChannelWrapperLeft {
   background-color: #fff;
   border-right: 1px solid #ddd;
@@ -24,17 +21,15 @@ body {
   overflow-x: hidden;
 }
 
-/* Right Channel Styles */
 .AppChannelWrapperRight {
   width: 75%;
   height: 100%;
   display: flex;
   flex-direction: column;
-  background-color: #e0f7fa; /* Light cyan */
-  position: relative; /* Position relative for proper form positioning */
+  background-color: #e0f7fa; 
+  position: relative; 
 }
 
-/* Logout Button Styles */
 .logout-button {
   position: fixed;
   top: 20px;
@@ -45,14 +40,13 @@ body {
   border: none;
   border-radius: 5px;
   cursor: pointer;
-  z-index: 10; /* Ensure the button stays on top */
+  z-index: 10; 
 }
 
 .logout-button:hover {
   background-color: #d32f2f;
 }
 
-/* Chat Window Styles */
 .chatWindow {
   flex: 1;
   display: flex;
@@ -66,7 +60,6 @@ body {
   margin-left: 10%;
 }
 
-/* Message Styles */
 .message-item {
   margin-bottom: 10px;
   padding: 10px;
@@ -74,33 +67,29 @@ body {
   max-width: 80%;
   word-break: break-word;
   display: flex;
-  justify-content: space-between; /* Align content and delete button */
-  align-items: center; /* Center align items vertically */
+  justify-content: space-between; 
+  align-items: center; 
 }
 
-/* Message Content Styles */
 .message-content {
-  flex: 1; /* Allow the content to take up available space */
+  flex: 1;
   display: flex;
   flex-direction: column;
-  margin-right: 10px; /* Space between message content and delete button */
+  margin-right: 10px;
 }
 
-/* Message Sent by User */
 .myMessage {
-  background-color: #d0f0c0; /* Light green */
-  align-self: flex-start; /* Align to the left */
+  background-color: #d0f0c0;
+  align-self: flex-start;
   text-align: right;
 }
 
-/* Message Received from Others */
 .userMessage {
-  background-color: #f0f0f0; /* Light grey */
-  align-self: flex-end; /* Align to the right */
+  background-color: #f0f0f0; 
+  align-self: flex-end; 
   text-align: left;
 }
 
-/* Username, Message, and Timestamp Styling */
 .message-item .username {
   font-weight: bold;
   margin-bottom: 0.2rem;
@@ -115,31 +104,30 @@ body {
 .message-item .timestamp {
   font-size: 0.7em;
   color: #888;
-  text-align: left; /* Align timestamp to the right */
+  text-align: left; 
 }
 
 .delete-btn {
-  background-color: #f44336; /* Red color */
-  color: white; /* Text color */
+  background-color: #f44336; 
+  color: white;
   border: none;
-  border-radius: 50%; /* Circular shape */
-  padding: 10px; /* Increased padding for a larger button */
+  border-radius: 50%; 
+  padding: 10px; 
   cursor: pointer;
   font-size: 16px;
-  transition: background-color 0.3s, transform 0.2s; /* Added transform for scaling effect */
-  width: 30px; /* Fixed width for circular shape */
-  height: 30px; /* Fixed height for circular shape */
-  display: flex; /* Flexbox to center icon */
-  align-items: center; /* Center icon vertically */
-  justify-content: center; /* Center icon horizontally */
+  transition: background-color 0.3s, transform 0.2s;
+  width: 30px; 
+  height: 30px; 
+  display: flex; 
+  align-items: center; 
+  justify-content: center;
 }
 
 .delete-btn:hover {
-  background-color: #d32f2f; /* Darker red on hover */
-  transform: scale(1.1); /* Darker red on hover */
+  background-color: #d32f2f; 
+  transform: scale(1.1); 
 }
 
-/* Form and Input Styles */
 .form-input {
   position: absolute;
   bottom: 0;
@@ -174,7 +162,6 @@ body {
   background-color: #0056b3;
 }
 
-/* Username Input Styling */
 .username-input {
   display: flex;
   flex-direction: column;
@@ -200,14 +187,12 @@ body {
   font-size: 16px;
 }
 
-/* Member Card Styling */
 .memberCardDm {
   display: flex;
   flex-direction: column;
   gap: 0;
   margin: 0;
   line-height: 0.3;
-  /* padding: 10px 10px; */
   border-bottom: 1px solid #ddd;
 }
 
@@ -224,7 +209,6 @@ h2 {
 
 /* =====================Group Chat Styles======================= */
 
-/* src/App.css */
 .create-group-form {
   width: 300px;
   margin: 0 auto;
@@ -267,12 +251,12 @@ h2 {
 
 .createGroupForm {
   display: flex;
-  flex-direction: column; /* Stack elements vertically */
-  margin-top: 10px; /* Space above the form */
+  flex-direction: column;
+  margin-top: 10px; 
 }
 
 .groupInput {
-  margin-bottom: 10px; /* Space between input fields */
+  margin-bottom: 10px; 
   padding: 8px;
   border: 1px solid #ccc;
   border-radius: 4px;
@@ -285,7 +269,7 @@ h2 {
 
 .createGroupButton {
   padding: 8px;
-  background-color: #007bff; /* Example button color */
+  background-color: #007bff;
   color: white;
   border: none;
   border-radius: 4px;
@@ -293,5 +277,5 @@ h2 {
 }
 
 .createGroupButton:hover {
-  background-color: #0056b3; /* Darken on hover */
+  background-color: #0056b3; 
 }
